--- a/packages/SystemUI/res/values/palladium_dimens.xml
+++ b/packages/SystemUI/res/values/palladium_dimens.xml
@@ -21,4 +21,7 @@
 
     <!-- QQS Brightness slider -->
     <dimen name="quick_qs_brightness_margin_top">24dp</dimen>
+
+    <!-- Screen record dot -->
+    <dimen name="screenrecord_dot_size">48dp</dimen>
 </resources>
