--- a/packages/SystemUI/res/values/palladium_dimens.xml
+++ b/packages/SystemUI/res/values/palladium_dimens.xml
@@ -34,6 +34,12 @@
 
     <!-- The height of the WiFi toggle layout in Internet panel -->
     <dimen name="internet_dialog_wifi_toggle_height">56dp</dimen>
+    
+    <!-- Network traffic -->
+    <dimen name="network_traffic_padding_ends">1dp</dimen>
+    <dimen name="network_traffic_unit_text_default_size">8sp</dimen>
+    <item name="network_traffic_rate_text_default_scale_factor" format="float" type="dimen">1.5</item>
+    <item name="network_traffic_line_spacing_multiplier" format="float" type="dimen">0.8</item>
 
 
     <!-- Tri-state UI -->
