PalladiumUtils: Import restart systemui api
Change-Id: I225b2dffe92816d4267b5041621232408e2d613d
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: sanjheevi <sanjheevisv@palladiumos.org>

--- a/core/res/res/values/palladium_strings.xml
+++ b/core/res/res/values/palladium_strings.xml
@@ -47,4 +47,8 @@
     <!-- Message shown to the user when the apps requests permission from this group. If ever possible this should stay below 80 characters (assuming the parameters takes 20 characters). Don't abbreviate until the message reaches 120 characters though. [CHAR LIMIT=120] -->
     <string name="permgrouprequest_fake_package_signature">Allow
         &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> to spoof package signature?</string>
+
+    <!-- SystemUI Restart -->
+    <string name="systemui_restart_title">SystemUI restart required</string>
+    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
 </resources>
