--- a/core/res/res/values/palladium_symbols.xml
+++ b/core/res/res/values/palladium_symbols.xml
@@ -36,4 +36,6 @@
     <!-- Proximity check on screen on default -->
     <java-symbol type="bool" name="config_proximityCheckOnWakeEnabledByDefault" />
 
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+    <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
 </resources>
