SystemUI: Integrate Google Lens into Screenshot UI
- shares the screenshot taken to Google Lens
- informs the user to install Google Lens if it is not installed

Squashed:

    From: cjh1249131356 <cjh1249131356@gmail.com>
    Date: Wed, 6 Jul 2022 15:35:31 +0800
    Subject: SystemUI: Make Lens work without independent package installed

    Reference: https://github.com/crdroidandroid/android_packages_apps_Launcher3/commit/35169a68be308b16aa833dfc68ec3f25b6fbf191

    Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
    Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

    From: Pranav Vashi <neobuddy89@gmail.com>
    Date: Sun, 26 Feb 2023 00:16:39 +0530
    Subject: SystemUI: Do not add lens screenshot without google package enabled

    Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/palladium_strings.xml
+++ b/packages/SystemUI/res/values/palladium_strings.xml
@@ -149,4 +149,6 @@
     <string name="tristate_rotation_90">Landscape (90°)</string>
     <string name="tristate_rotation_270">Landscape (270°)</string>
 
+    <!-- Label for UI element which allows to use lens on screenshot [CHAR LIMIT=30] -->
+    <string name="screenshot_lens_label">Lens</string>
 </resources>
