--- a/packages/SystemUI/res/values/palladium_config.xml
+++ b/packages/SystemUI/res/values/palladium_config.xml
@@ -38,4 +38,7 @@
     <!-- Trigger onFingerDown for action down events. This is a workaround for certain devices
          that have UDFPS delays without the commit present and should be false by default. -->
     <bool name="config_udfpsTriggerOnFingerDownForActionDown">false</bool>
+
+    <!-- Doze: does the double tap sensor need a proximity check? -->
+    <bool name="doze_double_tap_proximity_check">false</bool>
 </resources>
