udfps: Add support for udfps on aod without dedicated sensor
[markakash]: See, Google updated the onAcquiredGood to something more generic (onAcquired, with an acquiredInfo parameter) so the UdfpsOverlay can turn off HBM for the appropriate acquiredInfo messages. We are bascially adapting vendorCode to this method
Change-Id: I4aa39efe3714bcc40ab3da862809ca9c8974c6bd

This is squashed with the following commit:
Author: TheScarastic <warabhishek@gmail.com>
Date:   Sun Aug 21 18:40:57 2022 +0700

    udfps: Make AOD vendor code overlayable.

    Change-Id: If1aff1d0abb158487f7c99eba95124a2a9372c4f

Test: test udfps on AOD without dedicated sensor
Change-Id: I4b469b18bb6d2892914610274174224089b40e1b
Signed-off-by: Akash Srivastava <akashniki@gmail.com>

--- a/packages/SystemUI/res/values/palladium_config.xml
+++ b/packages/SystemUI/res/values/palladium_config.xml
@@ -31,4 +31,7 @@
 
     <!-- FPS measure interval in milliseconds, default 1000 -->
     <integer name="config_fpsReadInterval">1000</integer>
+
+    <!-- Udfps vendor code -->
+    <integer name="config_udfps_vendor_code">0</integer>
 </resources>
