SystemUI: Implement Bluetooth dialog
Based on Internet dialog code.

Change-Id: Iff63a49ff6a49c535b63a430bee8d7c55e78cbcc

[YAAP] minor edits for r11.
[someone5678] minor edits for Android 14 qpr1

Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

SystemUI: cleanup bluetooth dialog impl

Co-authored-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I3c1eb23a7df2112f2063bc2ab8c2e2993f33d2ec
Signed-off-by: someone5678 <someone5678@users.noreply.github.com>
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/packages/SystemUI/res/values/palladium_strings.xml
+++ b/packages/SystemUI/res/values/palladium_strings.xml
@@ -121,4 +121,9 @@
     <string name="vpn_credentials_username">Username</string>
     <string name="vpn_credentials_password">Password</string>
     <string name="vpn_credentials_dialog_connect">Connect</string>
+
+    <!-- Bluetooth dialog -->
+    <string name="turn_on_bluetooth">Use Bluetooth</string>
+    <string name="bluetooth_is_off">Bluetooth is off</string>
+    <string name="tap_a_device_to_connect">Tap a device to connect</string>
 </resources>
