--- a/packages/SystemUI/res/values/palladium_config.xml
+++ b/packages/SystemUI/res/values/palladium_config.xml
@@ -34,4 +34,8 @@
 
     <!-- Udfps vendor code -->
     <integer name="config_udfps_vendor_code">0</integer>
+
+    <!-- Trigger onFingerDown for action down events. This is a workaround for certain devices
+         that have UDFPS delays without the commit present and should be false by default. -->
+    <bool name="config_udfpsTriggerOnFingerDownForActionDown">false</bool>
 </resources>
