--- a/core/res/res/values/palladium_config.xml
+++ b/core/res/res/values/palladium_config.xml
@@ -55,4 +55,7 @@
 
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">true</bool>
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>    
 </resources>
