--- a/core/res/res/values/palladium_symbols.xml
+++ b/core/res/res/values/palladium_symbols.xml
@@ -55,5 +55,9 @@
     <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
 
     <!-- Whether to use Richtap vibration -->
-    <java-symbol type="bool" name="config_usesRichtapVibration" />    
+    <java-symbol type="bool" name="config_usesRichtapVibration" />
+
+    <!-- Define device configs on boot -->
+    <java-symbol type="array" name="global_device_configs_override" />
+    <java-symbol type="array" name="device_configs_override" />
 </resources>
