core: Allow to hide and set a default for status bar DT2S gesture
There might be edge cases of devices that have no power button
and no way to control externally connected displays. In such cases,
if display has touch support, DT2S shouldn't be allowed at all.

Change-Id: I3976f138d02f0b6ddf8ce239cb8c3a19ab737b67

--- a/core/res/res/values/palladium_config.xml
+++ b/core/res/res/values/palladium_config.xml
@@ -87,4 +87,8 @@
     </string-array>
     <string-array name="device_configs_override" translatable="false">
     </string-array>
+
+    <!-- Default values for status bar DT2S gesture -->
+    <bool name="config_dt2sGestureAvailable">true</bool>
+    <bool name="config_dt2sGestureEnabledByDefault">true</bool>
 </resources>
